commentary on Hs alternative forms

--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -681,7 +681,7 @@ Let $\opS$ be a system with input $\rvx(n)$, output $\rvy(n)$, and a driver $\rv
               {2\sqrt{\brp{\Swyy-p\Swxx }^2 + 4p\abs{\Swxy}^2}}
     \\&= \frac{\Swxx\brp{p\Swxx-\Swyy} + 2 \abs{\Swxy }^2 -  \Swxx\sqrt{\brp{p\Swxx-\Swyy}^2 + 4p\abs{\Swxy}^2}}
               {\sqrt{\brp{p\Swxx-\Swyy}^2 + 4p\abs{\Swxy}^2}}
-    \\
+    \\\\
       &\ddp\brs{p\Swyy-\Swxx + \sqrt{\brp{p\Swyy-\Swxx }^2 + 4 p \abs{\Swxy}^2}}
        = \Swyy  + \frac{2\Swyy\brp{p\Swyy-\Swxx}   + 4 \abs{\Swxy}^2}
                         {2\sqrt{\brp{p\Swyy-\Swxx}^2 + 4p\abs{\Swxy}^2}}
@@ -1016,6 +1016,195 @@ Let $\angle z\eqd\phi$ be the \fncte{phase} of $z$.
 \end{proof}
 
 %=======================================
+\section{Alternate forms}
+%=======================================
+Any standard kit of algebraic tricks should arguably always include the ability to
+swap the location of a square root between numerator and denominator.
+If you are of this persuasion, after traveling from 
+the definition of $\estHs$ on \prefpo{def:Hs}, you won't be dissappointed when arriving
+at the next proposition \xref{prop:Hs}.
+But it has more use than just allowing you to entertain friends at social occasions.
+It also makes it very easy to see (using only algebra) what previously 
+employed \thme{l'H{/<o}pital's rule} (using calculus)
+in the proof of \pref{thm:Hs_lim}---that $\lim_{s\to\infty}\estHs=\estHa$.
+% ________________________________________________________________________________
+%| |                                   2 s^2 Syx(w)                               |
+%|P| Hs(w) = -------------------------------------------------------------------- |
+%|R|                                  __________________________________________  |
+%|O|           2                  \  /[ 2                ]2       2 |        |2   |
+%|P|          s  Sxx(w) - Syy(w) + \/ [s  Sxx(w) - Syy(w)]   + 4 s  | Sxy(w) |    |
+%|_|______________________________________________________________________________|
+\begin{proposition}                                                               %
+\footnote{                                                                        %
+  \citerpgc{shin2008}{293}{0470725648}{(9.67)},                                   %
+  %\citePpc{white2006}{679}{(6)},                                                 %
+  \citePc{leclere2012}{(10) $\kappa(f)=1/s^2$ and $x$ and $y$ swapped}            %
+  }                                                                               %
+\label{prop:Hs}                                                                   %
+%---------------------------------------------------------------------------------%
+Let $\estHs(\omega; s)$ be defined as in \prefpp{def:Hs}.
+\propbox{\begin{array}{rc>{\ds}l}
+  \estHs(\omega; s)
+    &=&
+  \frac{\ds 2s^2\Swyx(\omega)}
+       {\ds  s^2\Swxx(\omega)-\Swyy(\omega) +
+        \sqrt{\brs{s^2\Swxx(\omega)-\Swyy(\omega)}^2 + 4s^2\abs{\Swxy(\omega)}^2}
+       }
+  \\&=& \frac{2 \Swxy^\ast}
+             {\Swxx - \frac{1}{s^2}\Swyy  + \sqrt{\brs{\Swxx - \frac{1}{s^2}\Swyy}^2 + \frac{4}{s^2} \abs{\Swxy }^2}}
+\end{array}}
+\end{proposition}
+\begin{proof}
+We can transform $\estHs$ from that found in \prefpp{def:Hs} to the forms in this proposition by the
+technique of ``\ope{rationalizing the denominator}"\footnote{\citerpc{slaught1915}{274}{``197. Rationalizing the Denominator."}
+\url{https://archive.org/details/elementaryalgebr00slaurich/page/274}
+Note that the operation in the proof of \pref{prop:Hs} is being performed essentially in reverse\ldots or rather ``rationalizing the numerator".}
+\begin{align*}
+  \estHs
+    &\eqd \frac{\Swyy - s^2 \Swxx  +
+            \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}
+           }{2\Swxy }
+    &&\text{by definition of $\estHs$
+             \xref{def:Hs}}
+  \\&= \mathrlap{\frac{
+            \brs{\Swyy - s^2 \Swxx  + \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}
+            \ocom{\brs{\Swyy - s^2 \Swxx  - \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}}{``\vale{rationalizing factor}"}
+            }{
+            2\Swxy
+            \mcom{\brs{\Swyy - s^2 \Swxx  - \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}}{``\vale{rationalizing factor}"}
+            }}
+  \\&= \frac{
+            \brs{\Swyy - s^2 \Swxx}^2  - \brs{\Swyy  -  s^2 \Swxx }^2 - 4 s^2 \abs{\Swxy }^2
+            }{
+            2\Swxy
+            \brs{\Swyy - s^2 \Swxx  - \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}
+            }
+   &&= \frac{
+            - 4 s^2 \abs{\Swxy }^2
+            }{
+            2\Swxy
+            \brs{\Swyy - s^2 \Swxx  - \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}
+            }
+  \\&= \boxed{\frac{2 s^2 \Swxy^\ast}
+            {s^2 \Swxx - \Swyy  + \sqrt{\brs{s^2 \Swxx - \Swyy}^2 + 4s^2 \abs{\Swxy }^2}}}
+   &&= \frac{2 \frac{s^2}{s^2} \Swxy^\ast}
+            {\frac{s^2}{s^2} \Swxx - \frac{1}{s^2}\Swyy  + \sqrt{\frac{1}{s^4}\brs{s^2 \Swxx - \Swyy}^2 + \frac{4s^2}{s^4} \abs{\Swxy }^2}}
+  \\&= \frac{2 \Swxy^\ast}
+            {\Swxx - \frac{1}{s^2}\Swyy  + \sqrt{\brs{\frac{s^2}{s^2} \Swxx - \frac{1}{s^2}\Swyy}^2 + \frac{4}{s^2} \abs{\Swxy }^2}}
+   &&= \boxed{\frac{2 \Swxy^\ast}
+            {\Swxx - \frac{1}{s^2}\Swyy  + \sqrt{\brs{\Swxx - \frac{1}{s^2}\Swyy}^2 + \frac{4}{s^2} \abs{\Swxy }^2}}}
+\end{align*}
+
+Integrity check for $s=0$ and $s\to\infty$ cases:
+Let $p\eqd s^2$.
+%Let $\ds\fG(s)\eqd
+%  \frac{\ds 2s^2\Swyx }
+%       {\ds  s^2\Swxx -\Swyy  +
+%        \sqrt{\brs{s^2\Swxx -\Swyy }^2 + 4s^2\abs{\Swxy }^2}
+%       }$.
+\begin{align*}
+  \lim_{p\to\infty}\estHs
+    &=    \lim_{p\to\infty}
+          \frac{\ds 2\Swyx }
+                {\ds  \Swxx -\frac{1}{p}\Swyy  +
+                 \sqrt{\brs{\Swxx -\frac{1}{p}\Swyy }^2 + \frac{4}{p}\abs{\Swxy }^2}
+                }
+   &&=    \frac{\ds 2\Swyx }
+               {\ds  \Swxx  +
+                 \sqrt{\brs{\Swxx }^2 }
+               }
+  \\&=    \frac{\Swyx }
+               {\Swxx }
+     \eqd \estHa
+    && \text{by def. of $\estHa$
+             \xref{def:H1}}
+\end{align*}
+\begin{align*}
+  \lim_{p\to0}\estHs
+    &=    \lim_{p\to0}
+          \frac{2p\Swyx}
+               { p\Swxx -\Swyy  + \sqrt{\brs{p\Swxx -\Swyy }^2 + 4p\abs{\Swxy }^2}}
+  \\&=    \lim_{p\to0}
+          \frac{\ddp\brp{2p\Swyx}}
+               {\ddp\brp{\ds
+                 p\Swxx -\Swyy + \sqrt{\brs{p\Swxx -\Swyy }^2 + 4p\abs{\Swxy}^2}
+               }}
+    &&    \text{by \thme{l'H{/<o}pital's rule}}
+  \\&=    \lim_{p\to0}
+          \frac{2\Swyx}{\ds
+            \frac{ \Swxx\brp{p\Swxx-\Swyy} + 2 \abs{\Swxy }^2 +  \Swxx\sqrt{\brp{p\Swxx-\Swyy}^2 + 4p\abs{\Swxy}^2}}
+                 { \sqrt{\brp{p\Swxx-\Swyy }^2 + 4p\abs{\Swxy}^2}}
+               }
+    &&    \text{by \prefp{lem:Hs_ddp}}
+  \\&=    \frac{2\Swyy\Swyx}
+               { -\Swxx\Swyy + 2 \abs{\Swxy }^2 +  \Swxx\Swyy}
+     =    \frac{2\Swyy\Swyx}
+               {2 \abs{\Swxy }^2}
+     =    \frac{\Swyy}
+               {\Swxy}
+  \\&\eqd \estHb
+    && \text{by def. of $\estHb$
+             \xref{def:H2}}
+\end{align*}
+\end{proof}
+
+% _______________________________________________________________________
+%| |                                   2 Syx(w)                          |
+%|P| Hv(w) = ------------------------------------------------------------|
+%|R|                               ____________________________________  |
+%|O|                           \  /[               ]2      |        |2   |
+%|P|          Sxx(w) - Syy(w) + \/ [Sxx(w) - Syy(w)]   + 4 | Sxy(w) |    |
+%|_|_____________________________________________________________________|
+\begin{proposition}                                                      %
+\footnote{                                                               %
+  \citePpc{white2006}{679}{(6)},                                         %
+  \citerpgc{shin2008}{294}{0470725648}{(9.69)}                           %
+  }                                                                      %
+\label{prop:Hv}                                                          %
+%------------------------------------------------------------------------%
+Let $\estHv(\omega)$ be the \fnctd{Total Least Squares transfer function estimate} \xref{def:Hv}.
+\propbox{
+  \estHv(\omega) \eqd
+  \frac{\ds2\Swyx(\omega)}
+       {\ds\Swxx(\omega)-\Swyy(\omega) + \sqrt{\brs{\Swxx(\omega)-\Swyy(\omega)}^2 + 4\abs{\Swxy(\omega)}^2}}
+  }
+\end{proposition}
+\begin{proof}
+\begin{align*}
+  \estHv(\omega)
+    &= \brlr{\estHs(\omega; s)}_{s=1}
+    && \text{by \prefp{thm:Hs_lim}}
+  \\&= \brlr{
+       \frac{\ds 2s^2\Swyx(\omega)}
+         {\ds  s^2\Swxx(\omega)-\Swyy(\omega) +
+          \sqrt{\brs{s^2\Swxx(\omega)-\Swyy(\omega)}^2 + 4s^2\abs{\Swxy(\omega)}^2}
+         }}_{s=1}
+    && \text{by \prefp{prop:Hs}}
+  \\&= \frac{\ds2\Swyx(\omega)}
+            {\ds\Swxx(\omega)-\Swyy(\omega) + \sqrt{\brs{\Swxx(\omega)-\Swyy(\omega)}^2 + 4\abs{\Swxy(\omega)}^2}}
+\end{align*}
+\end{proof}
+
+%%---------------------------------------
+%\begin{proposition}
+%\footnote{
+%  \citerpgc{shin2008}{293}{0470725648}{(9.67)},
+%  %\citePpc{white2006}{679}{(6)},
+%  }
+%\label{prop:Hkappa}
+%%---------------------------------------
+%Let $\estHkp(\omega)$ be defined as in \prefpp{def:Hkp}.
+%\propboxt{
+%  The \fnctd{transfer function estimate $\estHkp(\omega; \kappa)$} is defined as
+%  \\\indentx$\ds
+%  \estHkp(\omega) \eqd
+%  \frac{2\kappa(\omega)\Swyx(\omega)}
+%       {\kappa(\omega)\Swxx(\omega)-\Swyy(\omega) + \sqrt{\brs{\kappa(\omega)\Swxx(\omega)-\Swyy(\omega)}^2 + 4\kappa(\omega)\abs{\Swxy(\omega)}^2}}
+%  $
+%  }
+%\end{proposition}
+
+%=======================================
 \section{Least squares estimates}
 %=======================================
 \begin{minipage}{\tw-50mm}
@@ -1250,185 +1439,6 @@ Let $\opS$ be the \structe{system} illustrated in \prefp{fig:estHls} (B).
   \end{align*}
 \end{proof}
 
-%=======================================
-\section{Alternate forms}
-%=======================================
-% ________________________________________________________________________________
-%| |                                   2 s^2 Syx(w)                               |
-%|P| Hs(w) = -------------------------------------------------------------------- |
-%|R|                                  __________________________________________  |
-%|O|           2                  \  /[ 2                ]2       2 |        |2   |
-%|P|          s  Sxx(w) - Syy(w) + \/ [s  Sxx(w) - Syy(w)]   + 4 s  | Sxy(w) |    |
-%|_|______________________________________________________________________________|
-\begin{proposition}                                                               %
-\footnote{                                                                        %
-  \citerpgc{shin2008}{293}{0470725648}{(9.67)},                                   %
-  %\citePpc{white2006}{679}{(6)},                                                 %
-  \citePc{leclere2012}{(10) $\kappa(f)=1/s^2$ and $x$ and $y$ swapped}            %
-  }                                                                               %
-\label{prop:Hs}                                                                   %
-%---------------------------------------------------------------------------------%
-Let $\estHs(\omega; s)$ be defined as in \prefpp{def:Hs}.
-\propbox{\begin{array}{rc>{\ds}l}
-  \estHs(\omega; s)
-    &=&
-  \frac{\ds 2s^2\Swyx(\omega)}
-       {\ds  s^2\Swxx(\omega)-\Swyy(\omega) +
-        \sqrt{\brs{s^2\Swxx(\omega)-\Swyy(\omega)}^2 + 4s^2\abs{\Swxy(\omega)}^2}
-       }
-  \\&=& \frac{2 \Swxy^\ast}
-             {\Swxx - \frac{1}{s^2}\Swyy  + \sqrt{\brs{\Swxx - \frac{1}{s^2}\Swyy}^2 + \frac{4}{s^2} \abs{\Swxy }^2}}
-\end{array}}
-\end{proposition}
-\begin{proof}
-We can transform $\estHs$ from that found in \prefpp{def:Hs} to the forms in this proposition by the
-technique of ``\ope{rationalizing the denominator}"\footnote{\citerpc{slaught1915}{274}{``197. Rationalizing the Denominator."}
-\url{https://archive.org/details/elementaryalgebr00slaurich/page/274}
-Note that the operation in the proof of \pref{prop:Hs} is being performed essentially in reverse\ldots or rather ``rationalizing the numerator".}
-\begin{align*}
-  \estHs
-    &\eqd \frac{\Swyy - s^2 \Swxx  +
-            \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}
-           }{2\Swxy }
-    &&\text{by definition of $\estHs$
-             \xref{def:Hs}}
-  \\&= \mathrlap{\frac{
-            \brs{\Swyy - s^2 \Swxx  + \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}
-            \ocom{\brs{\Swyy - s^2 \Swxx  - \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}}{``\vale{rationalizing factor}"}
-            }{
-            2\Swxy
-            \mcom{\brs{\Swyy - s^2 \Swxx  - \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}}{``\vale{rationalizing factor}"}
-            }}
-  \\&= \frac{
-            \brs{\Swyy - s^2 \Swxx}^2  - \brs{\Swyy  -  s^2 \Swxx }^2 - 4 s^2 \abs{\Swxy }^2
-            }{
-            2\Swxy
-            \brs{\Swyy - s^2 \Swxx  - \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}
-            }
-   &&= \frac{
-            - 4 s^2 \abs{\Swxy }^2
-            }{
-            2\Swxy
-            \brs{\Swyy - s^2 \Swxx  - \sqrt{\brs{\Swyy  -  s^2 \Swxx }^2 + 4 s^2 \abs{\Swxy }^2}}
-            }
-  \\&= \boxed{\frac{2 s^2 \Swxy^\ast}
-            {s^2 \Swxx - \Swyy  + \sqrt{\brs{s^2 \Swxx - \Swyy}^2 + 4s^2 \abs{\Swxy }^2}}}
-   &&= \frac{2 \frac{s^2}{s^2} \Swxy^\ast}
-            {\frac{s^2}{s^2} \Swxx - \frac{1}{s^2}\Swyy  + \sqrt{\frac{1}{s^4}\brs{s^2 \Swxx - \Swyy}^2 + \frac{4s^2}{s^4} \abs{\Swxy }^2}}
-  \\&= \frac{2 \Swxy^\ast}
-            {\Swxx - \frac{1}{s^2}\Swyy  + \sqrt{\brs{\frac{s^2}{s^2} \Swxx - \frac{1}{s^2}\Swyy}^2 + \frac{4}{s^2} \abs{\Swxy }^2}}
-   &&= \boxed{\frac{2 \Swxy^\ast}
-            {\Swxx - \frac{1}{s^2}\Swyy  + \sqrt{\brs{\Swxx - \frac{1}{s^2}\Swyy}^2 + \frac{4}{s^2} \abs{\Swxy }^2}}}
-\end{align*}
-
-Integrity check for $s=0$ and $s\to\infty$ cases:
-Let $p\eqd s^2$.
-%Let $\ds\fG(s)\eqd
-%  \frac{\ds 2s^2\Swyx }
-%       {\ds  s^2\Swxx -\Swyy  +
-%        \sqrt{\brs{s^2\Swxx -\Swyy }^2 + 4s^2\abs{\Swxy }^2}
-%       }$.
-\begin{align*}
-  \lim_{p\to\infty}\estHs
-    &=    \lim_{p\to\infty}
-          \frac{\ds 2\Swyx }
-                {\ds  \Swxx -\frac{1}{p}\Swyy  +
-                 \sqrt{\brs{\Swxx -\frac{1}{p}\Swyy }^2 + \frac{4}{p}\abs{\Swxy }^2}
-                }
-   &&=    \frac{\ds 2\Swyx }
-               {\ds  \Swxx  +
-                 \sqrt{\brs{\Swxx }^2 }
-               }
-  \\&=    \frac{\Swyx }
-               {\Swxx }
-     \eqd \estHa
-    && \text{by def. of $\estHa$
-             \xref{def:H1}}
-\end{align*}
-\begin{align*}
-  \lim_{p\to0}\estHs
-    &=    \lim_{p\to0}
-          \frac{2p\Swyx}
-               { p\Swxx -\Swyy  + \sqrt{\brs{p\Swxx -\Swyy }^2 + 4p\abs{\Swxy }^2}}
-  \\&=    \lim_{p\to0}
-          \frac{\ddp\brp{2p\Swyx}}
-               {\ddp\brp{\ds
-                 p\Swxx -\Swyy + \sqrt{\brs{p\Swxx -\Swyy }^2 + 4p\abs{\Swxy}^2}
-               }}
-    &&    \text{by \thme{l'H{/<o}pital's rule}}
-  \\&=    \lim_{p\to0}
-          \frac{2\Swyx}{\ds
-            \frac{ \Swxx\brp{p\Swxx-\Swyy} + 2 \abs{\Swxy }^2 +  \Swxx\sqrt{\brp{p\Swxx-\Swyy}^2 + 4p\abs{\Swxy}^2}}
-                 { \sqrt{\brp{p\Swxx-\Swyy }^2 + 4p\abs{\Swxy}^2}}
-               }
-    &&    \text{by \prefp{lem:Hs_ddp}}
-  \\&=    \frac{2\Swyy\Swyx}
-               { -\Swxx\Swyy + 2 \abs{\Swxy }^2 +  \Swxx\Swyy}
-     =    \frac{2\Swyy\Swyx}
-               {2 \abs{\Swxy }^2}
-     =    \frac{\Swyy}
-               {\Swxy}
-  \\&\eqd \estHb
-    && \text{by def. of $\estHb$
-             \xref{def:H2}}
-\end{align*}
-\end{proof}
-
-% _______________________________________________________________________
-%| |                                   2 Syx(w)                          |
-%|P| Hv(w) = ------------------------------------------------------------|
-%|R|                               ____________________________________  |
-%|O|                           \  /[               ]2      |        |2   |
-%|P|          Sxx(w) - Syy(w) + \/ [Sxx(w) - Syy(w)]   + 4 | Sxy(w) |    |
-%|_|_____________________________________________________________________|
-\begin{proposition}                                                      %
-\footnote{                                                               %
-  \citePpc{white2006}{679}{(6)},                                         %
-  \citerpgc{shin2008}{294}{0470725648}{(9.69)}                           %
-  }                                                                      %
-\label{prop:Hv}                                                          %
-%------------------------------------------------------------------------%
-Let $\estHv(\omega)$ be the \fnctd{Total Least Squares transfer function estimate} \xref{def:Hv}.
-\propbox{
-  \estHv(\omega) \eqd
-  \frac{\ds2\Swyx(\omega)}
-       {\ds\Swxx(\omega)-\Swyy(\omega) + \sqrt{\brs{\Swxx(\omega)-\Swyy(\omega)}^2 + 4\abs{\Swxy(\omega)}^2}}
-  }
-\end{proposition}
-\begin{proof}
-\begin{align*}
-  \estHv(\omega)
-    &= \brlr{\estHs(\omega; s)}_{s=1}
-    && \text{by \prefp{thm:Hs_lim}}
-  \\&= \brlr{
-       \frac{\ds 2s^2\Swyx(\omega)}
-         {\ds  s^2\Swxx(\omega)-\Swyy(\omega) +
-          \sqrt{\brs{s^2\Swxx(\omega)-\Swyy(\omega)}^2 + 4s^2\abs{\Swxy(\omega)}^2}
-         }}_{s=1}
-    && \text{by \prefp{prop:Hs}}
-  \\&= \frac{\ds2\Swyx(\omega)}
-            {\ds\Swxx(\omega)-\Swyy(\omega) + \sqrt{\brs{\Swxx(\omega)-\Swyy(\omega)}^2 + 4\abs{\Swxy(\omega)}^2}}
-\end{align*}
-\end{proof}
-
-%%---------------------------------------
-%\begin{proposition}
-%\footnote{
-%  \citerpgc{shin2008}{293}{0470725648}{(9.67)},
-%  %\citePpc{white2006}{679}{(6)},
-%  }
-%\label{prop:Hkappa}
-%%---------------------------------------
-%Let $\estHkp(\omega)$ be defined as in \prefpp{def:Hkp}.
-%\propboxt{
-%  The \fnctd{transfer function estimate $\estHkp(\omega; \kappa)$} is defined as
-%  \\\indentx$\ds
-%  \estHkp(\omega) \eqd
-%  \frac{2\kappa(\omega)\Swyx(\omega)}
-%       {\kappa(\omega)\Swxx(\omega)-\Swyy(\omega) + \sqrt{\brs{\kappa(\omega)\Swxx(\omega)-\Swyy(\omega)}^2 + 4\kappa(\omega)\abs{\Swxy(\omega)}^2}}
-%  $
-%  }
-%\end{proposition}
 
 %=======================================
 \section{Estimates for LTI systems}
@@ -1450,7 +1460,7 @@ Let $\estHv(\omega)$ be the \fnctd{Total Least Squares transfer function estimat
 
 The previous section did assume the estimates $\estHa$ and $\estHb$  to be
 \prope{linear time invariant} (\prope{LTI}), but it did \emph{not} assume that
-the system transfer function $\opH$ itself to be \prope{LTI}.
+the system transfer function $\opT$ itself to be \prope{LTI}.
 But making the LTI assumption on $\opH$ yields some interesting and insightful
 results, such as those in this section.
 
