start introducing new LS estimate for measurement additive noise model

--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -1861,8 +1861,12 @@
  \newcommand{\estHgm}   {\estH_{\mathsfup{gm}}}  % 
  \newcommand{\estHhm}   {\estH_{\mathsfup{hm}}}  % 
  \newcommand{\estHls}   {\estH_{\mathsfup{ls}}}  % 
+ \newcommand{\estG}{\hat{\fG}}
+ \newcommand{\estGls}   {\estG_{\mathsfup{ls}}}  % 
 
  \newcommand{\fCost}[0]{\mathfnct{C}}
+ \newcommand{\fCostrq}[0]{\fCost_{\mathsfup{rq}}}
+ \newcommand{\fCostsy}[0]{\fCost_{\mathsfup{sy}}}
  \newcommand{\vpo  } [0]{\vp_{\mathsfup{opt}}}
  \newcommand{\vpio}[0]{{\check{\vpo}}}
  \newcommand{\vpe} [0]{{\hat{\vp}}}
