--- a/common/systemid.tex
+++ b/common/systemid.tex
@@ -153,7 +153,7 @@ and arrive at a function called ``\fncte{transmissibility}"
 %---------------------------------------
 \begin{definition}
 \footnote{
-  \citerpgc{bendat2011}{469}{1118210824}{$\abs{H(f)}=\brs{G_{yy}(f)/G_{xx}(f)}^{1/2}$},
+  \citerpgc{bendat2010}{469}{1118210824}{$\abs{H(f)}=\brs{G_{yy}(f)/G_{xx}(f)}^{1/2}$},
   \citePpc{yan2012}{204}{(1) $\brs{G_{YY}(s)}=\brs{H(s)}\brs{G_{FF}(s)}\brs{H^\ast(s)}^T$},
   \citerpgc{goldman1999}{179}{0831130881}{Transmissibility \ldots $H_{ab}'=\ffrac{G_{bb}}{G_{aa}}$ (note: differs by $\sqrt{\cdot}$ from Bendat and Piersol},
   \citeP{zhang2016},
@@ -201,7 +201,7 @@ then $\estHa$ (next definition) is the ideal estimator in the sense that $\estHa
 \begin{definition}[\fnctd{least squares estimate} of $\FH(\omega)$]
 \footnote{
   \citerppgc{bendat1993}{106}{109}{0471570559}{5.1.1 Optimality of Calculations},
-  \citerpgc{bendat2011}{185}{1118210824}{$H_1(f) = \ffrac{G_{xy}(f)}{G_{xx}(f)}$ (6.37)},
+  \citerpgc{bendat2010}{185}{1118210824}{$H_1(f) = \ffrac{G_{xy}(f)}{G_{xx}(f)}$ (6.37)},
   \citerpgc{shin2008}{293}{0470725648}{
     $H_1(f)=\ffrac{\Swxy(f)}{\Swxx(f)}$ (9.63);
     which differs from \pref{def:H1}, but see \prefp{rem:Rxym}
@@ -246,7 +246,7 @@ Note also that in the case of both no input and no output noise, then $\estHa=\e
   \citerpgc{shin2008}{293}{0470725648}{$H_2(f)=\ffrac{\Swyy(f)}{\Swyx(f)}$ (9.65);
     which differs from \pref{def:H2}, but see \prefp{rem:Rxym}
     },
-  \citerpgc{bendat2011}{186}{1118210824}{$H_2(f) = \ffrac{G_{yy}(f)}{G_{yx}(f)}$ (6.42)},
+  \citerpgc{bendat2010}{186}{1118210824}{$H_2(f) = \ffrac{G_{yy}(f)}{G_{yx}(f)}$ (6.42)},
   \citePc{mitchell1980}{cited by Cobb(1988)},
   \citePpc{mitchell1982}{278}{``Define what will be called an inverse method for calculation of a FRF as\ldots";
     $\~H_2(f)=\ffrac{G_{yy}}{G_{yx}}$ (6);
@@ -1220,14 +1220,15 @@ as demonstrated in the next theorem.
 \end{minipage}
 \hfill\tbox{\includegraphics{graphics/sysHw_xy.pdf}}
 
-\begin{figure}
+\begin{figure}[h]
   \centering
   \begin{tabular}{|c|c|}
     \hline
      \tbox{\includegraphics{graphics/opT_estH_cnoise.pdf}}
-    &\tbox{\includegraphics{graphics/opT_estH_mnoise.pdf}}
-    \\(A) LS estimation for communication  &(B) LS estimation for measurement
-    \\    noise system \xref{cor:H1LSa}    &    noise system \xref{cor:H1LSb}
+    &\tbox{\includegraphics{graphics/opT_estG_estH_mnoise.pdf}}
+    \\(A) \ope{Least squares estimation} for             &(B) \ope{Least squares estimation} for 
+    \\    \structe{communications additive noise model}  &    \structe{measurement additive noise model}
+    \\    \xref{cor:H1LSa}                               &    \xref{cor:H1LSb}
     \\\hline
   \end{tabular}
   \caption{Least Square estimation \xref{thm:estHls}\label{fig:estHls}}
@@ -1242,8 +1243,8 @@ Let $\norm{\rvX}^2\eqd\pE\brs{\rvX\rvX^\ast}$.
   \brbr{\begin{array}{FMMD}
       (A).& $\rvx$, $\rvu$, and $\rvv$ are & \prope{WSS}          & and
     \\(B).& $\rvx$, $\rvu$, and $\rvv$ are & \prope{uncorrelated} & and
-    \\(C).& $\pE\rvu=\pE\rvu=0$            & (\prope{zero-mean})  & and
-    \\(D).& $\estHls$ is \prope{LTI}         &                      &
+    \\(C).& $\pE\rvu=0$                    & (\prope{zero-mean})  & and
+    \\(D).& $\estGls$ is \prope{LTI}         &                      &
   \end{array}}
   \implies
   \brbl{\begin{array}{c}
@@ -1251,7 +1252,7 @@ Let $\norm{\rvX}^2\eqd\pE\brs{\rvX\rvX^\ast}$.
     \\
     \brp{\begin{array}{N}
       \scs The optimal \prope{LTI} \prope{least-squares} estimate of $\opT$ is
-      \\$\estHls(\omega)=\ffrac{\Swyp(\omega)}{\Swpp(\omega)}$
+      \\$\estGls(\omega)=\ffrac{\Swyp(\omega)}{\Swpp(\omega)}$
     \end{array}}
   \end{array}}
   }
@@ -1260,13 +1261,13 @@ Let $\norm{\rvX}^2\eqd\pE\brs{\rvX\rvX^\ast}$.
 \begin{enumerate}
   \item Define the \fncte{cost function} $\fCost\brp{\estH}$ for spectral \prope{least-squares} estimate as \label{item:H1LS_cost_def}
     $\fCost\brp{\estH} \eqd \norm{\FR(\omega)-\FQ(\omega)}^2$
-    \\where $\FR(\omega)$ is the \ope{DTFT} \xref{def:dtft} of $\rvw(n)$
+    \\where $\FR(\omega)$ is the \ope{DTFT} \xref{def:dtft} of $\rvu(n)$
       and   $\FQ(\omega)$ is the \ope{DTFT} of $\rvq(n)$.
 
-  \item lemma: $\fCost\brp{\estH}=\Swxx\abs{\estH}^2 - \estH(\omega)\Swxy - \brs{\estH\Swxy}^\ast + \Swqq$.
+  \item lemma: $\fCost\brp{\estG}=\Swxx\abs{\estG}^2 - \estG(\omega)\Swxy - \brs{\estG\Swxy}^\ast + \Swqq$.
         Proof: \label{ilem:H1LS_cost}
     \begin{align*}
-      \fCost\brp{\estH}
+      \fCost\brp{\estG}
         &\eqd \norm{\FR(\omega)-\FQ(\omega)}^2
         && \text{by \pref{item:H1LS_cost_def}}
       \\&\eqd \inprod{\FR(\omega)-\FQ(\omega)}{\FR(\omega)-\FQ(\omega)}
@@ -1280,73 +1281,73 @@ Let $\norm{\rvX}^2\eqd\pE\brs{\rvX\rvX^\ast}$.
            }
       \\&= \Swrr(\omega) - \Swrq(\omega) - \Swrq^\ast(\omega) + \Swqq(\omega)
         && \text{by \thme{Wiener-Khinchin relationship}}
-      \\&= \Swpp(\omega)\abs{\estH(\omega)}^2
-         - \estH(\omega)\Swpy(\omega)
-         - \brs{\estH(\omega)\Swpy(\omega)}^\ast
+      \\&= \Swpp(\omega)\abs{\estG(\omega)}^2
+         - \estG(\omega)\Swpy(\omega)
+         - \brs{\estG(\omega)\Swpy(\omega)}^\ast
          + \Swqq(\omega)
         &&\text{by (A)--(D) and \prefpp{cor:GHz}}
-      %\\&= \Swxx(\omega)\abs{\estH(\omega)}^2
-      %   + \Swuu(\omega)\abs{\estH(\omega)}^2
-      %   - \estH(\omega)\Swpy(\omega)
-      %   - \brs{\estH(\omega)\Swpy(\omega)}^\ast
+      %\\&= \Swxx(\omega)\abs{\estG(\omega)}^2
+      %   + \Swuu(\omega)\abs{\estG(\omega)}^2
+      %   - \estG(\omega)\Swpy(\omega)
+      %   - \brs{\estG(\omega)\Swpy(\omega)}^\ast
       %   + \Swqq(\omega)
       %  && \text{by (A)--(C) and \pref{cor:xvy}}
     \end{align*}
 
-  \item lemma: $\estH_R = \ffrac{\Real\Swyp}{\Swpp}$. Proof: \label{ilem:H1LS_R}
+  \item lemma: $\estG_R = \ffrac{\Real\Swyp}{\Swpp}$. Proof: \label{ilem:H1LS_R}
     \begin{align*}
-      0 &= \pderiv{}{\estH_R}\fCost\brp{\estH}
-      \\&= \pderiv{}{\estH_R}\brp{
-               \Swpp\abs{\estH}^2
-            %+ \Swuu\abs{\estH}^2
-             - \estH\Swpy
-             - \estH^\ast\Swpy^\ast
+      0 &= \pderiv{}{\estG_R}\fCost\brp{\estG}
+      \\&= \pderiv{}{\estG_R}\brp{
+               \Swpp\abs{\estG}^2
+            %+ \Swuu\abs{\estG}^2
+             - \estG\Swpy
+             - \estG^\ast\Swpy^\ast
              + \Swqq
              }
         && \text{by \prefp{ilem:H1LS_cost}}
-      \\&= \pderiv{}{\estH_R}\brp{
-               \Swpp\brs{\estH_R^2+\estH_I^2}
-            %+ \Swuu\brs{\estH_R^2+\estH_I^2}
-             - (\estH_R+i\estH_I)\Swpy
-             - (\estH_R+i\estH_I)^\ast\Swpy^\ast
+      \\&= \pderiv{}{\estG_R}\brp{
+               \Swpp\brs{\estG_R^2+\estG_I^2}
+            %+ \Swuu\brs{\estG_R^2+\estG_I^2}
+             - (\estG_R+i\estG_I)\Swpy
+             - (\estG_R+i\estG_I)^\ast\Swpy^\ast
              + \Swqq
              }
-      \\&= 2\estH_R\Swpp - \Swpy - \Swpy^\ast + \cancelto{0}{\pderiv{}{\estH_R}\Swqq}
-        &&\text{because $\rvq$ does not vary with $\estH$}
-      \\&= 2\estH_R\Swpp  - 2\Real\Swpy
-      \\&= 2\estH_R\Swpp  - 2\Real\Swyp
+      \\&= 2\estG_R\Swpp - \Swpy - \Swpy^\ast + \cancelto{0}{\pderiv{}{\estG_R}\Swqq}
+        &&\text{because $\rvq$ does not vary with $\estG$}
+      \\&= 2\estG_R\Swpp  - 2\Real\Swpy
+      \\&= 2\estG_R\Swpp  - 2\Real\Swyp
         && \text{by \prefp{cor:Swxy_sym}}
-      \\&\implies \boxed{\estH_R(\omega) = \frac{\Real\Swyp(\omega)}{\Swpp(\omega)}}
+      \\&\implies \boxed{\estG_R(\omega) = \frac{\Real\Swyp(\omega)}{\Swpp(\omega)}}
     \end{align*}
 
-  \item lemma: $\estH_I = \ffrac{\Imag\Swyp}{\Swpp}$. Proof: \label{ilem:H1LS_I}
+  \item lemma: $\estG_I = \ffrac{\Imag\Swyp}{\Swpp}$. Proof: \label{ilem:H1LS_I}
     \begin{align*}
       0
-        &= \pderiv{}{\estH_I}\fCost\brp{\estH}
-      \\&= \pderiv{}{\estH_I}
-           \brp{\Swpp\abs{\estH}^2 - \estH\Swpy - \estH^\ast\Swpy^\ast + \Swqq}
+        &= \pderiv{}{\estG_I}\fCost\brp{\estG}
+      \\&= \pderiv{}{\estG_I}
+           \brp{\Swpp\abs{\estG}^2 - \estG\Swpy - \estG^\ast\Swpy^\ast + \Swqq}
         && \text{by \prefp{ilem:H1LS_cost}}
-      \\&= \pderiv{}{\estH_I}\brs{
-           \Swpp\brs{\estH_R^2+\estH_I^2}
-        %+ \Swuu\brs{\estH_R^2+\estH_I^2}
-         - (\estH_R+i\estH_I)\Swpy
-         - (\estH_R-i\estH_I)\Swpy^\ast
+      \\&= \pderiv{}{\estG_I}\brs{
+           \Swpp\brs{\estG_R^2+\estG_I^2}
+        %+ \Swuu\brs{\estG_R^2+\estG_I^2}
+         - (\estG_R+i\estG_I)\Swpy
+         - (\estG_R-i\estG_I)\Swpy^\ast
          + \Swqq}
       \\&= \mathrlap{
-           2\estH_I\Swpp - i\Swpy + i\Swpy^\ast + \cancelto{0}{\pderiv{}{\estH_R}\Swqq}
-           \qquad\text{because $\rvq$ does not vary with $\estH$}
+           2\estG_I\Swpp - i\Swpy + i\Swpy^\ast + \cancelto{0}{\pderiv{}{\estG_R}\Swqq}
+           \qquad\text{because $\rvq$ does not vary with $\estG$}
            }
-      \\&= 2\estH_I\Swpp - 2i(i\Imag\Swpy)
-      \\&= 2\estH_I\Swpp + 2i(i\Imag\Swyp)
+      \\&= 2\estG_I\Swpp - 2i(i\Imag\Swpy)
+      \\&= 2\estG_I\Swpp + 2i(i\Imag\Swyp)
         && \text{by \prefp{cor:Swxy_sym}}
-      \\&= 2\estH_I\Swpp - 2\Imag\Swyp
-      \\&\implies \boxed{\estH_I(\omega) = \frac{\Imag\Swyp(\omega)}{\Swpp(\omega)}}
+      \\&= 2\estG_I\Swpp - 2\Imag\Swyp
+      \\&\implies \boxed{\estG_I(\omega) = \frac{\Imag\Swyp(\omega)}{\Swpp(\omega)}}
      \end{align*}
 
-  \item Proof that $\estH = \ffrac{\Swyx}{\Swpp} \eqd \estHa$:
+  \item Proof that $\estG = \ffrac{\Swyx}{\Swpp} \eqd \estHa$:
     \begin{align*}
-      \estH(\omega)
-        &= \estH_R(\omega) + i\estH_I(\omega)
+      \estG(\omega)
+        &= \estG_R(\omega) + i\estG_I(\omega)
       \\&= \frac{ \Real\Swyp(\omega)}{\Swpp(\omega)}
          + \frac{i\Imag\Swyp(\omega)}{\Swpp(\omega)}
         && \text{by \pref{ilem:H1LS_R} and \pref{ilem:H1LS_I}}
@@ -1371,22 +1372,22 @@ Let $\opS$ be the \structe{system} illustrated in \prefp{fig:estHls} (A).
   \begin{array}{F>{\ds}rc>{\ds}l}
     (1).&\brb{\text{hypotheses of \prefp{thm:estHls}}}
         &\implies
-        &\estHls(\omega) = \frac{\Swyx(\omega) + \Swyu(\omega)}{\Swxx(\omega)+\Swuu(\omega)}
+        &\estGls(\omega) = \frac{\Swyx(\omega) + \Swyu(\omega)}{\Swxx(\omega)+\Swuu(\omega)}
     \\
-    (2).&\brb{\text{hypotheses of \pref{thm:estHls} and $\vu(n)=0$}}
+    (2).&\brb{\text{hypotheses of \pref{thm:estHls} and $\rvu(n)=0$}}
         &\implies
-        &\estHls(\omega) = \frac{\Swyx(\omega)}{\Swxx(\omega)} = \estHa(\omega)
+        &\estGls(\omega) = \frac{\Swyx(\omega)}{\Swxx(\omega)} = \estHa(\omega)
   \end{array}}
 \end{corollary}
 \begin{proof}
   \begin{align*}
-    \text{(1):\quad}\estHls(\omega)
+    \text{(1):\quad}\estGls(\omega)
       &= \frac{\Swyp(\omega)}{\Swpp(\omega)}
       && \text{by \prefp{thm:estHls}}
     \\&= \frac{\Swyp(\omega)}{\Swxx(\omega)+\Swuu(\omega)}
      &&= \frac{\Swyx(\omega)+\Swyu(\omega)}{\Swxx(\omega)+\Swuu(\omega)}
     \\
-    \text{(2):\quad}\estHls(\omega)
+    \text{(2):\quad}\estGls(\omega)
       &= \frac{\Swyx(\omega)+\Swyu(\omega)}{\Swxx(\omega)+\Swuu(\omega)}
       && \text{by previous result}
       && \text{(1)}
@@ -1402,7 +1403,8 @@ Let $\opS$ be the \structe{system} illustrated in \prefp{fig:estHls} (A).
 \begin{corollary}
 \footnote{
   \citerppgc{bendat1980}{98}{100}{0471058874}{5.1.1 Optimal Character of Calculations; note: proof minimizing $\Swvv$ but yields same result},
-  \citerppgc{bendat1993}{106}{109}{0471570559}{5.1.1 Optimality of Calculations}
+  \citerppgc{bendat1993}{106}{109}{0471570559}{5.1.1 Optimality of Calculations},
+  \citerppgc{bendat2010}{187}{190}{1118210824}{6.1.4 Optimum Frequency Response Functions}
   }
 \label{cor:H1LSb}
 %---------------------------------------
@@ -1411,28 +1413,28 @@ Let $\opS$ be the \structe{system} illustrated in \prefp{fig:estHls} (B).
   \begin{array}{F>{\ds}rc>{\ds}l}
     (1).&\brb{\text{hypotheses of \prefp{thm:estHls}}}
         &\implies
-        &\estHls(\omega) = \frac{\Swyx(\omega)}{\Swxx(\omega)-\Swuu(\omega)}
+        &\estGls(\omega) = \frac{\Swyx(\omega)}{\Swxx(\omega)-\Swuu(\omega)}
     \\
-    (2).&\brb{\text{hypotheses of \pref{thm:estHls} and $\vw(n)=0$}}
+    (2).&\brb{\text{hypotheses of \pref{thm:estHls} and $\rvu(n)=0$}}
         &\implies
-        &\estHls(\omega) = \frac{\Swyx(\omega)}{\Swxx(\omega)} = \estHa(\omega)
+        &\estGls(\omega) = \frac{\Swyx(\omega)}{\Swxx(\omega)} = \estHa(\omega)
   \end{array}}
 \end{corollary}
 \begin{proof}
   \begin{align*}
-    \text{(1):\quad}\estHls(\omega)
+    \text{(1):\quad}\estGls(\omega)
       &= \frac{\Swyp(\omega)}{\Swpp(\omega)}
       && \text{by \prefp{thm:estHls}}
     \\&= \frac{\Swyp(\omega)}{\Swxx(\omega)-\Swuu(\omega)}
      &&= \frac{\Swyx(\omega)-\Swyu(\omega)}{\Swxx(\omega)-\Swuu(\omega)}
      &&= \frac{\Swyx(\omega)-\cancelto{0}{\Swyu(\omega)}}{\Swxx(\omega)-\Swuu(\omega)}
     \\
-    \text{(2):\quad}\estHls(\omega)
+    \text{(2):\quad}\estGls(\omega)
       &= \frac{\Swyx(\omega)}{\Swxx(\omega)-\Swuu(\omega)}
       && \text{by previous result}
       && \text{(1)}
     \\&= \frac{\Swyx(\omega)}{\Swxx(\omega)}
-      && \text{by $\rvw(n)=0$ hypothesis}
+      && \text{by $\rvu(n)=0$ hypothesis}
     \\&\eqd \estHa(\omega)
       && \text{by definition of $\estHa$}
       && \text{\xref{def:H1}}
@@ -1452,7 +1454,6 @@ Let $\opS$ be the \structe{system} illustrated in \prefp{fig:estHls} (B).
     \\
       (A) \opd{communications LTI additive noise model}
      &(B) \opd{measurement    LTI additive noise model}
-    \\
     \\\hline
   \end{tabular}
   \caption{Additive noise systems with \propb{LTI} operator $\opH$\label{fig:addnoise_LTI}}
@@ -1598,7 +1599,7 @@ Let $\opS$ be the \structe{system} illustrated in \prefpp{fig:addnoise_LTI}.
 \corbox{\begin{array}{lcl}
   \brb{\begin{array}{FMM}
       (A).& \mc{2}{M}{hypotheses of \pref{thm:estH1_mnoise} \scs and}
-    \\(B).& $\rvu(n)=\rvw(n)=0$               & (\prope{no input noise})
+    \\(B).& $\rvu(n)=\rvu(n)=0$               & (\prope{no input noise})
   \end{array}}
   &\implies&
   \brb{\begin{array}{>{\ds}rc>{\ds}lD}
